--- a/styles/modules-left.css
+++ b/styles/modules-left.css
@@ -2,17 +2,17 @@
     Workspaces
 ----------------*/
 
-#custom-left_div.1,
-#custom-right_div.1 {
-	color: @workspaces;
+#custom-left_div.1 label,
+#custom-right_div.1 label {
+  color: @workspaces;
 }
 #workspaces {
-	padding: 0 1px;
-	background-color: @workspaces;
+  padding: 0 1px;
+  background-color: @workspaces;
 }
 #workspaces button.active label,
 #workspaces button.focused label {
-	color: @accent;
+  color: @accent;
 }
 
 /*------------------
@@ -20,5 +20,5 @@
 ------------------*/
 
 #window {
-	margin: 0 12px;
+  margin: 0 12px;
 }
