--- a/styles/modules-right.css
+++ b/styles/modules-right.css
@@ -3,46 +3,46 @@
 ----------------*/
 
 #mpris {
-	padding: 0 12px;
+  padding: 0 12px;
 }
 
 /*------------
     Volume
 ------------*/
 
-#custom-left_div.6 {
-	color: @volume;
+#custom-left_div.6 label {
+  color: @volume;
 }
 #pulseaudio,
 #wireplumber {
-	background-color: @volume;
+  background-color: @volume;
 }
 
 /*----------------
     Brightness
 ----------------*/
 
-#custom-left_div.7 {
-	background-color: @volume;
-	color: @backlight;
+#custom-left_div.7 label {
+  background-color: @volume;
+  color: @backlight;
 }
 #backlight {
-	background-color: @backlight;
+  background-color: @backlight;
 }
 
 /*-------------
     Battery
 -------------*/
 
-#custom-left_div.8 {
-	background-color: @backlight;
-	color: @battery;
+#custom-left_div.8 label {
+  background-color: @backlight;
+  color: @battery;
 }
 #battery {
-	background-color: @battery;
+  background-color: @battery;
 }
-#custom-left_inv.2 {
-	color: @battery;
+#custom-left_inv.2 label {
+  color: @battery;
 }
 
 /*----------------
@@ -50,10 +50,10 @@
 ----------------*/
 
 #custom-power {
-	border-radius: 16px;
-	padding: 0 19px 0 16px;
-	color: @accent;
+  border-radius: 16px;
+  padding: 0 19px 0 16px;
+  color: @accent;
 }
 #custom-power:hover {
-	background-color: @hover-bg;
+  background-color: @hover-bg;
 }
